# agent-zero-v1

./: .agent_zero_pids  .env  .env.example  .gitignore  =5.0.0  ARCH_LINUX_FIX_INSTRUCTIONS.md  CHANGELOG.md  COMMIT_PHASE4_INTERACTIVE_AI.md  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile.adaptive  Dockerfile.analytics  Dockerfile.collaboration  Dockerfile.master  Dockerfile.predictive  Dockerfile.quantum  Dockerfile.team  FINAL_INTEGRATION_SUMMARY_20251012_085225.md  FINAL_INTEGRATION_SUMMARY_20251012_085823.md  FINAL_INTEGRATION_SUMMARY_20251012_090828.md  FINAL_INTEGRATION_SUMMARY_20251012_091958.md  MANIFEST.json  Makefile  NLU_TASK_DECOMPOSER_USAGE.md  PHASE1_COMPLETE.md  PHASE_3_PLAN.md  QUICK_START_INTEGRATED.md  README-V2-Enhancement.md  README-agent-zero-v2-deployment.md  README-arch-linux.md  README.md  ROADMAP.md  ROADMAP2.md  SECURE_QUICKSTART.md  Test  V2_DEPLOYMENT_SUMMARY.md  V2_INTELLIGENCE_LAYER.md  VERIFICATION_SUMMARY_20251013_081137.md  VERIFICATION_SUMMARY_20251013_081439.md  a0-advanced  a0-advanced.sh  (+434 more)
backups/20251012_103430/: pyproject.toml  requirements.txt
backups/20251012_103430/api/: dependencies.py  main.py
backups/20251012_103430/api/routes/: system.py
backups/20251012_103430/cli/: __init__.py  a0-run.sh
backups/20251012_103430/shared/: ai_streaming.py  extended_test.py  ollama_dashboard.py  simple_classifier.py  simple_dashboard.py  smart_agent_demo.py  test_ai_classifier.py  test_system_ollama.py  token_streaming_client.py
backups/20251012_103430/src/: interactive_ai_system_fixed.py  patient_ai_system.py  unlimited_ai_system_nolib.py
(+481 files in other folders)
